--- a/upstream.2
+++ b/upstream.2
@@ -2,7 +2,7 @@ workspace(name = "github_com_foo")
 
 http_archive(
     name = "abc",
-    sha256 = "pqr",
+    sha256 = "baz",
     urls = [
         "https://x.y",
     ],
